SAK-19404 merge trunk r84227 and 84233
git-svn-id: https://source.sakaiproject.org/svn/mailarchive/branches/sakai-2.8.x@84680 66ffb92e-73f9-0310-93c1-f5514f145a0a